# Deepfake-Audio-Detection

./: .gitignore  README.md  app.py  predict.py  pyproject.toml  requirements.txt  train.py
.streamlit/: config.toml
data/cache/: test_features.joblib  train_features.joblib  validation_features.joblib
data/raw/: manifest.json
models/: deepfake_audio_detector.joblib
notebooks/: deepfake_audio_training.ipynb
reports/: metrics.json  training_summary.json
scripts/: create_notebook.py  download_for_subset.py
src/deepfake_audio/: __init__.py  audio.py  config.py  evaluation.py  features.py  inference.py  modeling.py
tests/: test_audio_features.py  test_evaluation.py  test_inference.py
