[build-system]
requires = ["setuptools>=70"]
build-backend = "setuptools.build_meta"

[project]
name = "deepfake-audio-detector"
version = "1.0.0"
description = "Audio-forensics pipeline for genuine versus AI-generated speech."
requires-python = ">=3.10,<3.14"
dependencies = [
  "numpy==2.2.6",
  "scipy==1.15.3",
  "scikit-learn==1.6.1",
  "librosa==0.11.0",
  "soundfile==0.13.1",
  "joblib==1.4.2",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

